==============
Version 3.25.x (not yet released)
==============

- Several fixes in the GTK-Doc comments and GObject Introspection annotations.
- Lots of code clean-up and refactorings.
- Clean up the GSettings schema.
- Update GUI when system fonts change.
- Build system:
	- Disable -Werror by default.
	- Use git.mk.
	- Check for gsettings-desktop-schemas with pkg-config.

API changes:
- There has been some API breaks documented in the reference manual, but both
  Anjuta and gnome-builder should still compile and work fine.
- Deprecate dh_link_get_page_name().


==============
Version 3.24.0
==============

Updated translations: lv

Many thanks to all contributors: Rūdolfs Mazurs


===============
Version 3.23.92
===============

Fixed bugs:

 - #779378, devhelp 3.23.91 fails to build because of -Werror
 - #779563, Add Flatpak build manifest

Updated translations: da, fr, gl, id, ko, lt, zh_TW

Many thanks to all contributors: Changwoo Ryu, Kukuh Syafaat, Fran Dieguez,
Sébastien Wilmet, Ask Hjorth Larsen, Aurimas Černius, Chao-Hsiung Liao,
Charles Monzat


===============
Version 3.23.91
===============

Fixed bugs:

 - #763518, Add sidebar toggler to the menu
 - #770785, Add GTK-Doc API reference and GObject Introspection support
 - #771503, fix warning in finalize of sidebar
 - #773900, Small build system update
 - #774069, unable to build devhelp by jhbuild
 - #775261, Make DhLanguage a GObject subclass

Updated translations: cs, de, es, eu, fi, fur, hr, hu, it, kk, nb, pl,
pt_BR, sk, sl, sr@latin, sr, sv

Many thanks to all contributors: Balázs Meskó, Мирослав
Николић, Corentin Noël, Mario Blättermann, Milo Casagrande, Kjartan
Maraas, Enrico Nicoletto, Balázs Úr, Piotr Drąg, Marek Černocký,
Christian Hergert, Fabio Tomat, Sébastien Wilmet, gogo, Matej Urbančič,
Michael Catanzaro, Fábio Nogueira, Anders Jonsson, Rafael Fontenelle,
Miguel Vaello Martínez, Inaki Larranaga Murgoitio, Daniel Mustieles,
Baurzhan Muftakhidinov, Jiri Grönroos, Dušan Kazik

